--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
    },
    "homepage": "https://github.com/bugan/API-Voll.Med#readme",
    "dependencies": {
+      "axios": "^1.6.2",
       "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
